# kairos-api

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SKILL.md  alembic.ini  docker-compose.yml  pyproject.toml
kairos/: main.py
kairos/api/: auth.py  blackout_days.py  calendar.py  chat.py  events.py  projects.py  router.py  schedule.py  schedule_windows.py  tags.py  tasks.py  views.py
kairos/core/: auth.py  config.py  database.py  deps.py
kairos/models/: __init__.py  blackout_day.py  chat_session.py  google_account.py  google_calendar.py  project.py  schedule_log.py  schedule_window.py  tag.py  task.py  user.py  view.py
kairos/schemas/: auth.py  blackout_day.py  calendar.py  chat.py  project.py  schedule.py  schedule_window.py  tag.py  task.py  view.py
kairos/services/: auth_service.py  blackout_service.py  chat_service.py  gcal_service.py  project_service.py  schedule_window_service.py  scheduler.py  tag_service.py  task_service.py  view_service.py
migrations/: env.py
references/: api-contract.md  architecture-decisions.md  data-model.md  frontend-handover-schedule-views.md  gcal-integration.md  project-structure.md  scheduling-engine.md  testing.md
tests/: conftest.py  mocks.py  test_auth.py  test_blackout_days.py  test_calendar_api.py  test_chat.py  test_gcal_all_day_support.py  test_gcal_expiry_normalization.py  test_gcal_service.py  test_health.py  test_migrations.py  test_models.py  test_projects.py  test_recurrence.py  test_schedule_endpoints.py  test_schedule_windows.py  test_scheduler.py  test_tags.py  test_tasks.py  test_views.py
(+9 files in other folders)
